Fixed whitespace on corner of svg

--- a/src/style/sass/app.scss
+++ b/src/style/sass/app.scss
@@ -55,9 +55,11 @@ body {
       }
     }
     #svg {
+      overflow: hidden;
       img {
         margin-bottom: -5px;
-        width: 100%;
+        margin-left: -1%;
+        width: 102%;
       }
     }
   }
